--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "email": "email dev --dir app/emails"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
